Correction night color and dakr color logo to perform contrast design

--- a/src/components/sectionCareer/_sectionCareer.scss
+++ b/src/components/sectionCareer/_sectionCareer.scss
@@ -58,7 +58,7 @@
   p {
     width: 100%;
     cursor: default;
-    background-color: rgba(3, 62, 75, 0.4);
+    background-color: rgba(2, 44, 53, 0.4);
     border-radius: 5px;
     margin-bottom: 10px;
     padding: 10px;
@@ -71,7 +71,7 @@
     transition: 400ms ease-in-out;
     &:hover {
       font-weight: bold;
-      background-color: rgba(3, 62, 75, 0.6);
+      background-color: rgba(2, 44, 53, 0.6);
       scale: 1.05;
     }
     @include responsiveTabloids {
@@ -159,7 +159,7 @@
     box-shadow: inherit;
     &::after {
       box-shadow: 0px 0px 5px white inset;
-      background-color: rgba(3, 62, 75, 0.9);
+      background-color: rgba(2, 44, 53, 0.9);
       content: attr(data-descr);
     }
   }
@@ -191,7 +191,7 @@
     margin-top: 10px;
     font-size: 14px;
     font-weight: inherit;
-    background-color: rgba(3, 62, 75, 0.4);
+    background-color: rgba(2, 44, 53, 0.4);
     padding: 5px;
   }
 }
