--- a/src/components/sectionSkills/_sectionSkills.scss
+++ b/src/components/sectionSkills/_sectionSkills.scss
@@ -29,7 +29,7 @@
   min-height: 82px;
   border-radius: 5px;
   margin: 10px 0px;
-  background-color: rgba(3, 62, 75, 0.8);
+  background-color: rgba(2, 44, 53, 0.8);
   padding: 20px;
   transition: all 500ms;
   display: flex;
@@ -61,7 +61,7 @@
 
   &:hover {
     scale: 1.3;
-    background-color: rgba(3, 62, 75, 1);
+    background-color: rgba(2, 44, 53, 0.9);
 
     .skillsItem_name {
       scale: 0;
