--- a/src/components/sliderOldProjects/_sliderOldProjects.scss
+++ b/src/components/sliderOldProjects/_sliderOldProjects.scss
@@ -69,7 +69,7 @@
       text-align: center;
       justify-content: space-around;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(2, 44, 53, 0.7);
       transition: 400ms ease-in-out;
       &:hover {
         opacity: 1;
@@ -102,7 +102,7 @@
 
   h2 {
     font-weight: inherit;
-    background-color: rgba(3, 62, 75, 0.4);
+    background-color: rgba(2, 44, 53, 0.4);
     padding: 5px;
     text-align: center;
     margin-top: 10px;
@@ -135,7 +135,7 @@
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background-color: rgba(3, 62, 75, 0.4);
+    background-color: rgba(2, 44, 53, 0.4);
     border: 3px solid map-get($colors, snow);
   }
 }
